# teplee-game-bot

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: api.py  auth.py  config.py  db.py  main.py
backend/app/bot/: handlers.py  push.py  render.py  runner.py
backend/app/services/: clock.py  game.py  lemmatize.py
backend/tests/: conftest.py  test_api.py  test_bot_handlers.py  test_bot_render.py  test_health.py  test_push.py  test_services.py
deploy/: README.md  backup.sh  docker-compose.yml  healthcheck.sh
docs/: DATA_PIPELINE.md  DEPLOY.md  PRD.md  ROADMAP.md  TECH_SPEC.md
generator/: README.md  build_answer_dict.py  build_en_forms.py  build_guess_dict.py  common.py  download_assets.py  generate_ranks.py  pyproject.toml  smoke_test.py  validate.py
webapp/: README.md  package-lock.json  package.json
webapp/src/: App.tsx
