[project]
name = "generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lemminflect>=0.2.3",
    "navec>=0.10.0",
    "nltk>=3.10.0",
    "numpy>=2.5.1",
    "pymorphy3>=2.0.6",
    "pymorphy3-dicts-ru>=2.4.417150.4580142",
    "requests>=2.34.2",
    "tqdm>=4.69.0",
    "wordfreq>=3.1.1",
]
